# movie-site

./: README.md
client/: README-REORGANIZATION.md  index.html  package-lock.json  package.json  tailwind.config.js
client/movie/client/: package-lock.json  package.json
client/movie/client/src/: App.jsx  index.css  main.jsx
client/src/: App.css  App.jsx  api.js  config.js  index.css  main.jsx
client/src/Components/: Footer.jsx  Navbar.jsx
client/src/Pages/: AvailableCinemas.jsx  AvailableNow.jsx  Carousel.jsx  ComingSoon.jsx  Footer.jsx  Home.jsx  LandingPage.jsx  MpesaPayment.jsx  NotFound.jsx  ProtectedRoute.jsx
client/src/Pages/admin/: AdminAuthPage.jsx  AdminDashboard.jsx
client/src/Pages/booking/: Booking.jsx
client/src/api/: admin.js  auth.js  movies.js  reservation.js  showtime.js  upload.js
client/src/components/: AdminAuthPage.jsx  AdminDashboard.jsx  AuthModal.jsx  ProtectedRoute.jsx  UserDashboard.jsx
client/src/contexts/: AuthContext.jsx  ReservationContext.js
client/src/pages/: AdminPage.css  AdminPage.jsx  HomePage.css  HomePage.jsx  MoviesPage.css  MoviesPage.jsx  NotFoundPage.css  NotFoundPage.jsx  ProfilePage.css  ProfilePage.jsx
server/: .env  .gitignore  Pipfile  app.db  app.py  debug_jwt_logging.py  exit()  generate_secret.py  insomnia_movie_site.json  models.py  pyproject.toml  requirements.txt  seed.py  test_cloudinary.py  thunder_client_collection.json
server/instance/: cinema.db  data.db
server/migrations/versions/: 52644a3cadda_increase_username_email_length.py  5f1ed898d4d9_.py  b9a9503f0a9b_.py  beb7b68e1afd_.py
(+45 files in other folders)
