[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"
flask-cors = "^5.0.1"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.1.0"
Flask-JWT-Extended = "^4.7.1"
python-dotenv = "^1.1.0"
humanize = "^4.12.3"
cloudinary = "^1.44.0"
resend = "^2.9.0"
stripe = "^12.1.0"
requests = "^2.32.3"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
